--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -49,6 +49,7 @@
             <div th:insert="~{content/material-page}" th:if="${index} == 'material-page'"></div>
             <div th:insert="~{content/slider-page}" th:if="${index} == 'slider-page'"></div>
             <div th:insert="~{content/event-page}" th:if="${index} == 'event-page'"></div>
+            <div th:insert="~{content/event-card}" th:if="${index} == 'event-card'"></div>
             <div th:insert="~{content/contact-page}" th:if="${index} == 'contact-page'"></div>
             <div th:insert="~{content/admin-page}" th:if="${index} == 'admin-page'"></div>
             <div th:insert="~{content/login-page}" th:if="${index} == 'login-page'"></div>
